--- a/Secciones/Media 2/ModulosDetallados/MF5.tex
+++ b/Secciones/Media 2/ModulosDetallados/MF5.tex
@@ -1,6 +1,7 @@
 \subsubsection{MF5. Módulo gestor de energía}
 
-\paragraph{MF5.1}
+\subsubsubsection{MF5.1}
 Para el diseño del módulo gestor de energía primero se debe de tener en consideración todos los componentes eléctricos y electrónicos que serán utilizados para poner en funcionamiento todo todo el sistema, además de los valores de tensión y corriente a los que trabajan. Hay que tener en cuenta que se tienen componentes que trabajan con corriente alterna y otros componentes trabajan con corriente directa, por lo que se debe de regular y distribuir diferentes valores de tensión a diferentes los diferentes módulos del sistema, como son el módulo de procesamiento, el módulo de generación y medición de la acústica y sobre todo el módulo modificador de la acústica, en el cual se concentra la mayor parte de los componentes electrónicos, los cuales nos permiten controlar tanto el movimiento del motor, como el acople de los primas a la corona para poder girar, los paneles que nosotros queramos.
 Para poder acoplar y desacoplar los paneles de forma correcta y cuando el sistema lo indique, se optó por usar un mecanismo, el cual utiliza solenoides, para realizar la selección correcta de dichos componentes primero se debió tener la fuerza que se necesita para poder mover el mecanismo de acople, y la cual fue .....N,
-\paragraph{MF5.1}
+
+\subsubsubsection{MF5.2}
